--- a/.config
+++ b/.config
@@ -4866,7 +4866,7 @@ CONFIG_PACKAGE_luci-app-bypass_INCLUDE_Socks5_Proxy=y
 CONFIG_PACKAGE_luci-app-bypass_INCLUDE_Socks_Server=y
 CONFIG_PACKAGE_luci-app-cifs-mount=y
 CONFIG_PACKAGE_luci-app-cifsd=y
-CONFIG_PACKAGE_luci-app-cjdns=y
+# CONFIG_PACKAGE_luci-app-cjdns is not set
 CONFIG_PACKAGE_luci-app-clamav=y
 CONFIG_PACKAGE_luci-app-clash=y
 CONFIG_PACKAGE_luci-app-commands=y
