--- a/.config
+++ b/.config
@@ -6279,7 +6279,7 @@ CONFIG_PACKAGE_p910nd=y
 # CONFIG_PACKAGE_bird2cl is not set
 # CONFIG_PACKAGE_bmx6 is not set
 # CONFIG_PACKAGE_bmx7 is not set
-CONFIG_PACKAGE_cjdns=y
+# CONFIG_PACKAGE_cjdns is not set
 # CONFIG_PACKAGE_cjdns-tests is not set
 # CONFIG_PACKAGE_dcstad is not set
 # CONFIG_PACKAGE_dcwapd is not set
