--- a/.config
+++ b/.config
@@ -24,7 +24,7 @@ CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_mvebu is not set
 # CONFIG_TARGET_kirkwood is not set
 # CONFIG_TARGET_mediatek is not set
-CONFIG_TARGET_ramips=y
+# CONFIG_TARGET_ramips is not set
 # CONFIG_TARGET_at91 is not set
 # CONFIG_TARGET_tegra is not set
 # CONFIG_TARGET_layerscape is not set
@@ -1886,7 +1886,7 @@ CONFIG_PACKAGE_ipv6helper=y
 # CONFIG_PACKAGE_k3wifi is not set
 # CONFIG_PACKAGE_libjose is not set
 CONFIG_PACKAGE_nginx=y
-CONFIG_PACKAGE_nginx-mod-luci-ssl=y
+# CONFIG_PACKAGE_nginx-mod-luci-ssl is not set
 CONFIG_PACKAGE_nginx-util=y
 # CONFIG_PACKAGE_tang is not set
 # end of Extra packages
@@ -6943,8 +6943,8 @@ CONFIG_PACKAGE_iftop=y
 CONFIG_PACKAGE_iiod=y
 CONFIG_PACKAGE_iperf=y
 CONFIG_IPERF_ENABLE_MULTICAST=y
-CONFIG_PACKAGE_iperf3=y
-CONFIG_PACKAGE_iperf3-ssl=y
+# CONFIG_PACKAGE_iperf3 is not set
+# CONFIG_PACKAGE_iperf3-ssl is not set
 CONFIG_PACKAGE_ipip=y
 CONFIG_PACKAGE_ipset=y
 CONFIG_PACKAGE_ipset-dns=y
@@ -6989,8 +6989,8 @@ CONFIG_PACKAGE_libipset=y
 # CONFIG_PACKAGE_mosquitto-nossl is not set
 # CONFIG_PACKAGE_mosquitto-ssl is not set
 # CONFIG_PACKAGE_mstpd is not set
-CONFIG_PACKAGE_mtr-json=y
-CONFIG_PACKAGE_mtr-nojson=y
+# CONFIG_PACKAGE_mtr-json is not set
+# CONFIG_PACKAGE_mtr-nojson is not set
 # CONFIG_PACKAGE_nbd is not set
 # CONFIG_PACKAGE_nbd-server is not set
 # CONFIG_PACKAGE_ncp is not set
@@ -7016,9 +7016,9 @@ CONFIG_PACKAGE_noping=y
 # CONFIG_NPS_COMPRESS_UPX is not set
 # CONFIG_PACKAGE_nut is not set
 # CONFIG_PACKAGE_obfs4proxy is not set
-CONFIG_PACKAGE_odhcp6c=y
-CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
-CONFIG_PACKAGE_odhcpd=y
+# CONFIG_PACKAGE_odhcp6c is not set
+# CONFIG_PACKAGE_odhcp6c_ext_cer_id is not set
+# CONFIG_PACKAGE_odhcpd is not set
 
 #
 # Configuration
@@ -7336,8 +7336,8 @@ CONFIG_PACKAGE_parted=y
 # CONFIG_PACKAGE_nano-full is not set
 # CONFIG_PACKAGE_nano-plus is not set
 CONFIG_PACKAGE_vim=y
-CONFIG_PACKAGE_vim-full=y
-CONFIG_PACKAGE_vim-fuller=y
+# CONFIG_PACKAGE_vim-full is not set
+# CONFIG_PACKAGE_vim-fuller is not set
 CONFIG_PACKAGE_vim-help=y
 CONFIG_PACKAGE_vim-runtime=y
 # CONFIG_PACKAGE_zile is not set
@@ -7737,7 +7737,7 @@ CONFIG_PACKAGE_coreutils-base64=y
 # CONFIG_PACKAGE_coreutils-mv is not set
 # CONFIG_PACKAGE_coreutils-nice is not set
 # CONFIG_PACKAGE_coreutils-nl is not set
-CONFIG_PACKAGE_coreutils-nohup=y
+# CONFIG_PACKAGE_coreutils-nohup is not set
 # CONFIG_PACKAGE_coreutils-nproc is not set
 # CONFIG_PACKAGE_coreutils-numfmt is not set
 # CONFIG_PACKAGE_coreutils-od is not set
