--- a/.config
+++ b/.config
@@ -4767,7 +4767,7 @@ CONFIG_PACKAGE_luci-app-bird1-ipv4=y
 # CONFIG_PACKAGE_luci-app-bypass_INCLUDE_Socks_Server is not set
 CONFIG_PACKAGE_luci-app-cifs-mount=y
 # CONFIG_PACKAGE_luci-app-cifsd is not set
-CONFIG_PACKAGE_luci-app-cjdns=y
+# CONFIG_PACKAGE_luci-app-cjdns is not set
 # CONFIG_PACKAGE_luci-app-clamav is not set
 CONFIG_PACKAGE_luci-app-clash=y
 # CONFIG_PACKAGE_luci-app-commands is not set
