--- a/.config
+++ b/.config
@@ -325,7 +325,8 @@ CONFIG_SIGNATURE_CHECK=y
 #
 # General build options
 #
-# CONFIG_TESTING_KERNEL is not set
+CONFIG_TESTING_KERNEL=y
+CONFIG_LINUX_5_15=y
 # CONFIG_DISPLAY_SUPPORT is not set
 # CONFIG_BUILD_PATENTED is not set
 # CONFIG_BUILD_NLS is not set
